--- a/client/src/app/market-place/market-place.component.scss
+++ b/client/src/app/market-place/market-place.component.scss
@@ -4,6 +4,12 @@
     margin-bottom: 8px;
 }
 
+.sortDiv {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center
+}
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -32,114 +38,130 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     border: 1px solid #ccc !important;
     border-radius: 16px;
     padding-top: 30px;
     margin-top: 30px;
     margin-bottom: 50px;
-}
+    padding-bottom: 30px;
+    background: rgb(142,142,142);
+    background: linear-gradient(90deg, rgba(142,142,142,1) 0%, rgba(139,139,139,1) 100%);
 
-ul {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #ccc !important;
-    border-radius: 16px;
-    padding-top: 30px;
-    font-style: black;
+    .textpp {
+      .header {
+        font-size: 35px;
+        font-weight: 50px;
+        color: rgb(255, 255, 255);
+        padding-bottom: 20px;
+      }
+    }
 
-    li {
-        padding: 1em;
-        margin-bottom: 1em;
+    .cardDiv {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+    }
+    .card {
+      margin-left: 40px;
+      margin-right: 40px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+      overflow: hidden;
+      width: 300px;
+      height: 330px;
+    }
+
+    .card-header {
+      display: flex;
+      flex-wrap: wrap;
+      align-items:flex-end;
+      justify-content: center;
+    }
+
+
+    .card-header img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+    }
+    .card-body {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 20px;
+      min-height: 200px;
+
+      .bottom {
         display: flex;
-        flex-direction: column;
-        min-width: 280px;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        align-self: flex-end;
+      }
 
+      .button{
+        width: 70px;
+        height: 50px;
+        border: none;
+        outline: none;
+        background: #da291c;
+        color: #fff;
+        font-size: 22px;
+        border-radius: 40px;
+        text-align: center;
+        box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
+        cursor: pointer;
+      }
 
-        p {
-            margin: 0;
-            color: black;
-        }
-
-        p.name {
-            font-weight: bold;
-            font-size: 1.2rem;
-        }
-        p.country {
-            text-transform: uppercase;
-            font-size: .9rem;
-            flex-grow: 1;
-        }
     }
+
+    .tag {
+      background: #cccccc;
+      border-radius: 50px;
+      font-size: 12px;
+      margin-bottom: 10px;
+      color: #fff;
+      padding: 2px 10px;
+      text-transform: uppercase;
+      cursor: pointer;
+      background-color: #da291c;
+    }
+
+    .card-body p {
+      font-size: 13px;
+
+    }
+
+
 }
 
-.card2 {
-    display: block;
-    top: 0px;
-    position: relative;
-    max-width: 262px;
-    background-color: #e0e0e0;
-    border-radius: 4px;
-    padding: 32px 24px;
-    margin: 12px;
-    text-decoration: none;
-    z-index: 0;
-    overflow: hidden;
-    border: 1px solid #f2f8f9;
+.searchpp {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ccc !important;
+  border-radius: 16px;
+  padding-top: 30px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  padding-bottom: 30px;
+  background: rgb(142,142,142);
+  background: linear-gradient(90deg, rgba(142,142,142,1) 0%, rgba(139,139,139,1) 100%);
 
-    &:hover {
-      transition: all 0.2s ease-out;
-      box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
-      top: -4px;
-      border: 1px solid #cccccc;
-      background-color: white;
-    }
-
-    &:before {
-      content: "";
-      position: absolute;
-      z-index: -1;
-      top: -16px;
-      right: -16px;
-      background: #da291c;
-      height: 32px;
-      width: 32px;
-      border-radius: 32px;
-      transform: scale(2);
-      transform-origin: 50% 50%;
-      transition: transform 0.15s ease-out;
-    }
-
-    &:hover:before {
-      transform: scale(2.15);
-    }
-  }
-
-
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    background-color: #f7f8fc;
-    font-family: "Roboto", sans-serif;
-    color: #10182f;
-  }
-  .container {
-    display: flex;
-    width: 1040px;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-  }
   .card {
-    margin: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     width: 300px;
-    height: 400px;
+    height: 330px;
   }
 
   .card-header {
@@ -204,13 +226,67 @@ ul {
 
   }
 
+
+}
+
+ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    border-radius: 16px;
+    padding-top: 30px;
+    font-style: black;
+
+    li {
+
+        margin-bottom: 1em;
+        display: flex;
+        min-width: 280px;
+
+
+        p {
+            margin: 0;
+            color: black;
+        }
+
+        p.name {
+            font-weight: bold;
+            font-size: 1.2rem;
+        }
+        p.country {
+            text-transform: uppercase;
+            font-size: .9rem;
+            flex-grow: 1;
+        }
+    }
+}
+
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background-color: #f7f8fc;
+    font-family: "Roboto", sans-serif;
+    color: #10182f;
+  }
+  .container {
+    display: flex;
+    width: 1040px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+
+
+
   /* div */
   .search-box {
-    position: absolute;
+
     //top: 50%;
-    left: 82%;
+
     transform: translate(-50%, -50%);
-    background: #cd595a;
+    background: linear-gradient(92.83deg, rgb(255, 116, 38) 0%, rgb(249, 58, 19) 100%);
     height: 60px;
     border-radius: 50px;
     padding: 10px;
@@ -241,7 +317,7 @@ ul {
     width: 40px;
     height: 40px;
     border-radius: 50px;
-    background: #cd595a;
+    background:linear-gradient(92.83deg, rgb(255, 116, 38) 0%, rgb(249, 58, 19) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -298,13 +374,7 @@ ul {
   }
 
   .bn632-hover.bn28 {
-      background-image: linear-gradient(
-        to right,
-        #eb3941,
-        #f15e64,
-        #e14e53,
-        #e2373f
-      );
+      background-image: linear-gradient(92.83deg, rgb(255, 116, 38) 0%, rgb(249, 58, 19) 100%);
       box-shadow: 0 5px 15px rgba(242, 97, 103, 0.4);
     }
 .button-78 {
@@ -370,7 +440,7 @@ ul {
 
   .button-78:after {
   background-color: initial;
-  background-image: linear-gradient(#541a0f 0, #0c0d0d 100%);
+
   bottom: 4px;
   content: "";
   display: block;
