--- a/client/src/app/profile-page/profile-page.component.scss
+++ b/client/src/app/profile-page/profile-page.component.scss
@@ -1,4 +1,20 @@
 
+.buttonReg {
+  width: 200px;
+  height: 30px;
+  border: none;
+  outline: none;
+  background: #757575;
+  color: #fff;
+  font-size: 22px;
+  border-radius: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
+  cursor: pointer;
+}
 .profileHeader {
   display: flex;
   flex-wrap: wrap;
@@ -11,12 +27,24 @@
 
   $brown: #786450;
 
+  .profileBanner {
+    background-color: rgb(194, 194, 194);
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    height:200px;
+  }
+
   body{
     margin-top:20px;
     color: #1a202c;
     text-align: left;
     background-color: #e2e8f0;
 }
+
+
+
 .main-body {
     padding: 15px;
 }
@@ -97,32 +125,9 @@
       overflow: hidden;
   }
 
-  .grifLeft {
-    height: 600px;
-    margin: 10px;
-    margin-left: 0px;
-    padding: 5px;
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-  }
-  .gridRight {
-    background: #f3f3f3;
-    border-radius: 20px;
-    box-shadow: 15px 15px rgba(0,0,0,.15);
-    transition: all .4s ease;
-    height: 800px;
-    margin: 10px;
-    margin-right: 0;
-    padding: 5px;
-    width: 800px;
-  }
-
 
   .sort {
-    background: #f3f3f3;
-    border-radius: 20px;
-    box-shadow: 5px 5px rgba(0,0,0,.15);
+
     margin: 5px;
     padding: 5px;
     height: 40%;
@@ -133,13 +138,9 @@
 }
 
 .eventInfo {
-    background: #f3f3f3;
-    border-radius: 20px;
-    box-shadow: 5px 5px rgba(0,0,0,.15);
     margin: 5px;
     padding: 5px;
     height: 60%;
-    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
