--- a/client/src/app/market-place/market-place.component.scss
+++ b/client/src/app/market-place/market-place.component.scss
@@ -1,14 +1,23 @@
 
-.example-card {
-    max-width: 400px;
-    margin-bottom: 8px;
+.pageHeader {
+  font-size: 40px;
+  margin: 20px;  
+  letter-spacing: 20px;
+  word-spacing: 20px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .sortDiv {
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center
+  justify-content: space-between;
+
+  h1 {
+    font-size: 30px;
+    position: relative;
+    letter-spacing: 4px;
+    font-weight: Bold;
+  }
 }
 .container {
     display: flex;
@@ -19,7 +28,7 @@
     min-height: 300px;
     background-color: #dbd5d4;
     margin-bottom: 20px;
-
+    
     .news {
 
 
@@ -284,8 +293,6 @@ ul {
   .search-box {
 
     //top: 50%;
-
-    transform: translate(-50%, -50%);
     background: linear-gradient(92.83deg, rgb(255, 116, 38) 0%, rgb(249, 58, 19) 100%);
     height: 60px;
     border-radius: 50px;
