Front&backend commit

--- a/client/src/app/register-component/register-component.component.scss
+++ b/client/src/app/register-component/register-component.component.scss
@@ -112,7 +112,7 @@ input[type="file"] {
 
     .crbtn{
         cursor: pointer;
-        background-color: blue;
+        background-color: linear-gradient(92.83deg, rgb(255, 116, 38) 0%, rgb(249, 58, 19) 100%);
         border: none;
         color: #fff;
         padding: 20px;
