--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -12,7 +12,7 @@
 <div class="containerpp" allign="center">
 
   <div class="textpp">
-    <p class="header">Those are the most popular packages on the platform</p>
+    <p class="header">These are the most popular packages on the platform</p>
   </div>
 
   <div class="cardDiv">
@@ -76,7 +76,7 @@
             <i class="fas fa-search"></i>
           </a>
         </div>
-        <mat-form-field appearance="fill">
+        <!--<mat-form-field appearance="fill">
           <mat-label>Categories</mat-label>
           <mat-select [formControl]="categories" multiple name="selectCategory" #packageByCategory (selectionChange)="showPackageByCategory($event.value)">
             <mat-select-trigger>
@@ -87,7 +87,7 @@
             </mat-select-trigger>
             <mat-option *ngFor="let category of convertToJSON(category)" [value]="category">{{category}}</mat-option>
           </mat-select>
-        </mat-form-field>&nbsp;&nbsp;&nbsp;
+        </mat-form-field>&nbsp;&nbsp;&nbsp;-->
 
         <!--button (click)="sortClick()">Sort</button-->
         <!--button className="bn632-hover bn28" (click)="sortClick()">Sort</button-->
