--- a/client/src/app/market-place/market-place.component.scss
+++ b/client/src/app/market-place/market-place.component.scss
@@ -6,9 +6,13 @@
 
 .sortDiv {
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center
+  justify-content: space-between;
+  h1 {
+    font-size: 30px;
+    position: relative;
+    letter-spacing: 4px;
+    font-weight: Bold;
+  }
 }
 .container {
     display: flex;
@@ -284,8 +288,6 @@ ul {
   .search-box {
 
     //top: 50%;
-
-    transform: translate(-50%, -50%);
     background: linear-gradient(92.83deg, rgb(255, 116, 38) 0%, rgb(249, 58, 19) 100%);
     height: 60px;
     border-radius: 50px;
