--- a/client/src/app/profile-page/profile-page.component.html
+++ b/client/src/app/profile-page/profile-page.component.html
@@ -9,9 +9,9 @@
                   <div class=" align-items-center text-center">
                     <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="Admin" class="rounded-circle" width="150">
                     <div class="mt-3">
-                      <h4>John Doe {{currentUser.first_name | json}}</h4>
+                      <h4> {{currentUser.first_name}} {{currentUser.last_name}}</h4>
                       <p class="text-secondary mb-1">Content Creator</p>
-                      <p class="text-muted font-size-sm">JhonAlharthy@gmail.com</p>
+                      <p class="text-muted font-size-sm">{{currentUser.email}}</p>
                       <button class="btn btn-primary">Edit Profile</button>
                       <button class="btn btn-outline-primary">Upgrade</button>
                     </div>
@@ -22,10 +22,10 @@
                 <div class="sort">
                   <p>Want to register a new package, click here</p>
                   <br/>
-                    <a routerLink="/createPackage" class="buttonReg">Reigster</a>
+                    <a routerLink="/createPackage" class="buttonReg">Register</a>
                 </div>
                 <div class="eventInfo">
-                  <h1>Packges </h1>
+                  <h1>Packages </h1>
                     <p>
                     Why do we use it?It is a long established fact that a reader will be distracted by
                     the readable content of a page when looking at its layout. The point of using Lorem
