--- a/client/src/app/register/register.component.css
+++ b/client/src/app/register/register.component.css
@@ -1,6 +1,6 @@
 .registration{
   width : 500px;
-
+  border: 10px solid #FF4B2B;
 }
 
 .signupContainer{
@@ -8,5 +8,10 @@
   flex-wrap: wrap;
   align-items:flex-end;
   justify-content: center;
+  border-width: medium;
 
+}
+
+.btn {
+  color: linear-gradient(92.83deg, rgb(255, 116, 38) 0%, rgb(249, 58, 19) 100%);
 }
