Home page optimized

--- a/client/src/app/home-page/home-page.component.html
+++ b/client/src/app/home-page/home-page.component.html
@@ -1,5 +1,68 @@
-<p>home-page works nicely!</p>
-<h3>Loggedin user: {{currentUser | json }}</h3>
-
+<html>
+<body id="page-top">
+<!--h3>Loggedin user: {{currentUser | json }}</h3-->
+<header class="masthead text-center text-white">
+<div class="masthead-content">
+  <div class="container px-5">
+    <h1 class="masthead-heading mb-0">Ivanti Market Place</h1>
+    <h2 class="masthead-subheading mb-0">Welcome</h2>
+    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="/login">Get Started</a>
+  </div>
+</div>
+<div class="bg-circle-1 bg-circle"></div>
+<div class="bg-circle-2 bg-circle"></div>
+<div class="bg-circle-3 bg-circle"></div>
+<div class="bg-circle-4 bg-circle"></div>
+</header>
+<!-- Content section 1-->
+<section id="scroll">
+  <div class="container px-5">
+    <div class="row gx-5 align-items-center">
+      <div class="col-lg-6 order-lg-2">
+        <div class="p-5"><img class="img-fluid rounded-circle" src="http://systeo.biz/wp-content/themes/systeo/img/smart/application_block_1.png" alt="..." /></div>
+      </div>
+      <div class="col-lg-6 order-lg-1">
+        <div class="p-5">
+          <h2 class="display-4">Discover our packages !</h2>
+          <p>By accessing our market place, you can find and download multiple and diversified packages according to your need.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Content section 2-->
+<section>
+  <div class="container px-5">
+    <div class="row gx-5 align-items-center">
+      <div class="col-lg-6">
+        <div class="p-5"><img class="img-fluid rounded-circle" src="https://vente-en-ligne.net/wp-content/uploads/2020/09/3733784-1024x1024.jpg" alt="..." /></div>
+      </div>
+      <div class="col-lg-6">
+        <div class="p-5">
+          <h2 class="display-4">Member Area</h2>
+          <p>All users of this market place can access their member area through the login portal. Each user has the same rights.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Content section 3-->
+<section>
+  <div class="container px-5">
+    <div class="row gx-5 align-items-center">
+      <div class="col-lg-6 order-lg-2">
+        <div class="p-5"><img class="img-fluid rounded-circle" src="https://vente-en-ligne.net/wp-content/uploads/2020/09/3777639-1024x683.jpg" alt="..." /></div>
+      </div>
+      <div class="col-lg-6 order-lg-1">
+        <div class="p-5">
+          <h2 class="display-4">Contact</h2>
+          <p>In case of any problem or question, you can contact our team at any time.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!--<app-footer></app-footer>-->
+</body>
+</html>
