--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,16 @@
 <div *ngFor="let item of items | async">
   {{item | json}}
 </div> -->
+<html>
+<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+<!-- Font Awesome icons (free version)-->
+<script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+<!-- Google fonts-->
+<link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
+<!-- Core theme CSS (includes Bootstrap)-->
 
+<body id="page-top">
 <header>
   <div class="navbar">
     <img routerLink="/" class="logo" src="https://tinyimg.io/i/rvpoMM4.png"  />
@@ -22,6 +31,28 @@
     </nav>
   </div>
 
+  <!--nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+    <div class="container px-5">
+      <img class="navbar-brand" routerLink="/" class="logo" src="https://tinyimg.io/i/rvpoMM4.png"/>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ms-auto">
+
+          <li class="nav-item"><a class="nav-link" href="#" routerLink="/home"><b>{{'home' | translate}}</b></a></li>
+          <li class="nav-item"><a class="nav-link" href="#" routerLink="/market">{{'list' | translate}}</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" routerLink="/register">{{'register' | translate}}</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" routerLink="/login">{{'login' | translate}}</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" routerLink="/profile">{{'profile' | translate}}</a></li>
+          <li >
+            <select [(ngModel)]="translationService.language">
+              <option *ngFor="let language of translationService.languages" [ngValue]="language">{{language}}</option>
+            </select>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav-->
+
 
 
 
@@ -33,4 +64,10 @@
     <router-outlet></router-outlet>
   </div>
 </div>
-<app-footer></app-footer>
+<!--app-footer></app-footer-->
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="js/scripts.js"></script>
+</body>
+</html>
