--- a/client/src/app/profile-page/profile-page.component.html
+++ b/client/src/app/profile-page/profile-page.component.html
@@ -22,10 +22,10 @@
                 <div class="sort">
                   <p>Want to register a new package, click here</p>
                   <br/>
-                    <a routerLink="/createPackage" class="buttonReg">Reigster</a>
+                    <a routerLink="/createPackage" class="buttonReg">Register</a>
                 </div>
                 <div class="eventInfo">
-                  <h1>Packges </h1>
+                  <h1>Packages </h1>
                     <p>
                     Why do we use it?It is a long established fact that a reader will be distracted by
                     the readable content of a page when looking at its layout. The point of using Lorem
