--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,7 +8,7 @@
     <img routerLink="/" class="logo" src="https://tinyimg.io/i/rvpoMM4.png"  />
     <nav>
       <ul>
-        <li><a [hidden]="loggedIn" routerLink="/home"><b>{{'home' | translate}}</b></a></li>
+        <li><a [hidden]="loggedIn" routerLink="/home"><b>{{'home'}}</b></a></li>
         <li><a [hidden]="!loggedIn" routerLink="/market">{{'marketplace' | translate}}</a></li>
         <li><a [hidden]="!loggedIn" routerLink="/profile">{{'profile' | translate}}</a></li>
         <li><a [hidden]="loggedIn" routerLink="/register">{{'register' | translate}}</a></li>
