--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -94,7 +94,7 @@
 
         <!--button (click)="sortClick()">Sort</button-->
         <!--button className="bn632-hover bn28" (click)="sortClick()">Sort</button-->
-        <button class="button-78" role="button" (click)="sortClick()">Sort</button>
+        <button class="button-78" role="button" (click)="sortClick()">Sort (A to Z)</button>
       </div>
 <div class="containerPP">
 
