All packages label

--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -77,7 +77,7 @@
           </a>
         </div>
         <div>
-          <h1>All pacakges</h1>
+          <h1>All packages</h1>
         </div>
         <!-- <mat-form-field appearance="fill">
           <mat-label>Categories</mat-label>
