--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -9,10 +9,10 @@
     <nav>
       <ul>
         <li><a [hidden]="loggedIn" routerLink="/home"><b>{{'home'}}</b></a></li>
-        <li><a [hidden]="!loggedIn" routerLink="/market">{{'marketplace' | translate}}</a></li>
-        <li><a [hidden]="!loggedIn" routerLink="/profile">{{'profile' | translate}}</a></li>
-        <li><a [hidden]="loggedIn" routerLink="/register">{{'register' | translate}}</a></li>
-        <li><a [hidden]="loggedIn" routerLink="/login">{{'login' | translate}}</a></li>
+        <li><a [hidden]="!loggedIn" routerLink="/market">{{'marketplace'}}</a></li>
+        <li><a [hidden]="!loggedIn" routerLink="/profile">{{'profile'}}</a></li>
+        <li><a [hidden]="loggedIn" routerLink="/register">{{'register'}}</a></li>
+        <li><a [hidden]="loggedIn" routerLink="/login">{{'login'}}</a></li>
         <li><a [hidden]="!loggedIn" (click)="logout()">Logout</a></li>
         <li>
           <select [(ngModel)]="translationService.language">
