--- a/client/src/app/upload-download/upload-download.component.html
+++ b/client/src/app/upload-download/upload-download.component.html
@@ -6,7 +6,7 @@
         <form id="fileUploadForm">
             <h3>File Upload</h3>
             <input type="file" name="file" id="fileUploadInput" class="file-input" required>
-            <button type="submit" class="submit-btn">Upload</button>
+            <button type="click" class="submit-btn">Upload</button>
         </form>
     </div>
 
