--- a/client/src/app/register-component/register-component.component.html
+++ b/client/src/app/register-component/register-component.component.html
@@ -3,16 +3,13 @@
         <h2 style="text-align: center;">Sorry! Browser does not support TypeScript.</h2>
     </noscript>
 
-    <script src="./upload-download.component.ts"></script>
-
-
         <form class="registerForm" >
             <h2 >Create a new package </h2>
             <div class="subForm">
                 <div class="leftGrid">
                     <div class="controls half">
-                        <label >Name*</label>
-                        <input id="name" type="text"  name="Name" required>
+                        <label >Title*</label>
+                        <input id="title" type="text"  name="title" required>
                     </div>
 
                     <div class="controls half">
@@ -29,7 +26,16 @@
                         <label >Package Description</label>
                         <textarea > </textarea>
                     </div>
-
+                 
+                    
+          <!-- <label>Categories</label>
+          <select name="selectCategory" #packageByCategory (selectionChange)="showPackageByCategory($event.value)">
+              <span *ngIf="categories.value?.length > 1" style="opacity: 0.75;font-size: 0.75em;">
+                (+{{categories.value.length - 1}} {{categories.value?.length === 2 ? 'other' : 'others'}})
+              </span>
+            <option *ngFor="let category of convertToJSON(category)" [value]="category">{{category}}</option>
+          </select> -->
+            
 
                 </div>
                 <div class="rightGrid">
@@ -39,11 +45,10 @@
                             <textarea > </textarea>
                         </div>
                         <div class="file-upload">
-                            <form id="fileUploadForm">
-                                <h3>File Upload</h3>
-                                <input type="file" name="file" id="fileUploadInput" class="full" required>
-                                <button type="submit" class="submit-btn">Upload</button>
-                            </form>
+                            <div class="file-upload">
+                                    <h3>File Upload</h3>
+                                    <input type="file" name="file" id="fileUploadInput" class="file-input" required>
+                            </div>
                         </div>
 
                         <div class="file-download">
@@ -53,7 +58,8 @@
                 </div>
             </div>
             <div>
-                <button (click)="onSubmit()" class="crbtn">Create</button>
+                <button type="button" (click)="onSubmit()" class="crbtn">Create</button>
             </div>
         </form>
+
     </div>
