Fixed filter by category, display packages, footer

--- a/client/src/app/home-page/home-page.component.html
+++ b/client/src/app/home-page/home-page.component.html
@@ -19,7 +19,7 @@
   <div class="container px-5">
     <div class="row gx-5 align-items-center">
       <div class="col-lg-6 order-lg-2">
-        <div class="p-5"><img class="img-fluid rounded-circle" src="http://systeo.biz/wp-content/themes/systeo/img/smart/application_block_1.png" alt="..." /></div>
+        <div class="p-5"><img class="img-fluid rounded-circle" src="http://systeo.biz/wp-content/themes/systeo/img/smart/application_block_1.png" alt="..." style="height:340px"/></div>
       </div>
       <div class="col-lg-6 order-lg-1">
         <div class="p-5">
@@ -32,17 +32,18 @@
 </section>
 <!-- Content section 2-->
 <section>
+  <div class="col-lg-6">
+    <div class="p-5">
+      <h2 class="display-4">Member Area</h2>
+      <p>All users of this market place can access their member area through the login portal. Each user has the same rights.</p>
+    </div>
+  </div>
   <div class="container px-5">
     <div class="row gx-5 align-items-center">
       <div class="col-lg-6">
-        <div class="p-5"><img class="img-fluid rounded-circle" src="https://vente-en-ligne.net/wp-content/uploads/2020/09/3733784-1024x1024.jpg" alt="..." /></div>
+        <div class="p-5"><img class="img-fluid rounded-circle" src="https://vente-en-ligne.net/wp-content/uploads/2020/09/3733784-1024x1024.jpg" alt="..." style="height:340px"/></div>
       </div>
-      <div class="col-lg-6">
-        <div class="p-5">
-          <h2 class="display-4">Member Area</h2>
-          <p>All users of this market place can access their member area through the login portal. Each user has the same rights.</p>
-        </div>
-      </div>
+
     </div>
   </div>
 </section>
@@ -51,7 +52,7 @@
   <div class="container px-5">
     <div class="row gx-5 align-items-center">
       <div class="col-lg-6 order-lg-2">
-        <div class="p-5"><img class="img-fluid rounded-circle" src="https://vente-en-ligne.net/wp-content/uploads/2020/09/3777639-1024x683.jpg" alt="..." /></div>
+        <div class="p-5"><img class="img-fluid rounded-circle" src="https://vente-en-ligne.net/wp-content/uploads/2020/09/3777639-1024x683.jpg" alt="..." style="height:340px" /></div>
       </div>
       <div class="col-lg-6 order-lg-1">
         <div class="p-5">
