--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <header>
   <div class="navbar">
-    <img routerLink="/" class="logo" src="https://tinyimg.io/i/rvpoMM4.png"  />
+    <img routerLink="/home" class="logo" src="https://tinyimg.io/i/rvpoMM4.png"  />
     <nav>
       <ul>
         <li><a [hidden]="loggedIn" routerLink="/home"><b>{{'home'}}</b></a></li>
