--- a/client/src/app/footer/footer.component.css
+++ b/client/src/app/footer/footer.component.css
@@ -1,9 +1,9 @@
-/*#footer {
-    position: fixed;
-    height: 50px;
-    background-color: red;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    margin-bottom: 0px;
-}*/
+#footer {
+
+  position:relative;
+  top:100%;
+  bottom:0;
+  width:100%;
+
+
+}
