--- a/client/src/app/market-place/market-place.component.html
+++ b/client/src/app/market-place/market-place.component.html
@@ -2,113 +2,29 @@
 
 <div class="container" align="center">
   <div class="news">
-  <div class="text">
-    <p>News</p>
-  </div>
+    <div class="text">
+      <p>News</p>
+    </div>
   </div>
 </div>
 <div>
 
-<div class="containerpp" allign="center">
+  <div class="containerpp" allign="center">
 
-  <div class="textpp">
-    <p class="header">Those are the most popular packages on the platform</p>
-  </div>
-
-  <div class="cardDiv">
-    <div class="card">
-      <div class="card-header">
-        <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
-      </div>
-      <div class="card-body">
-        <p class="tag tag-red">Technology</p>
-        <p>
-          An exploration into the truck's polarising design
-          An exploration into the truck's polarising design
-          An exploration into the truck's polarising design
-        </p>
-        <div class="bottom">
-          <p >Created By : Ahmed Alharthy</p>
-        </div>
-      </div>
+    <div class="textpp">
+      <p class="header">Those are the most popular packages on the platform</p>
     </div>
-    <div class="card">
-      <div class="card-header">
-        <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
-      </div>
-      <div class="card-body">
-        <p class="tag tag-red">Framework</p>
-        <p>
-          An exploration into the truck's polarising design
-          An exploration into the truck's polarising design
-          An exploration into the truck's polarising design
-        </p>
-        <div class="bottom">
-          <p >Created By : Ahmed Alharthy</p>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header">
-        <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
-      </div>
-      <div class="card-body">
-        <p class="tag tag-red">Technology</p>
-        <p>
-          An exploration into the truck's polarising design
-          An exploration into the truck's polarising design
-          An exploration into the truck's polarising design
-        </p>
-        <div class="bottom">
-          <p >Created By : Ahmed Alharthy</p>
-        </div>
-      </div>
-    </div>
-  </div>
-      </div>
-      <!--input type="text" class="form-control" (input)="showSearch($event.target.value)" placeholder="Search package..."-->
 
-
-      <div class="sortDiv">
-        <div class="search-box">
-          <input type="text" class="search-input" (input)="showSearch($event.target.value)" placeholder="Search package...">
-          <a class="search-btn" href="#">
-            <i class="fas fa-search"></i>
-          </a>
-        </div>
-        <div>
-          <h1>All packages</h1>
-        </div>
-        <!-- <mat-form-field appearance="fill">
-          <mat-label>Categories</mat-label>
-          <mat-select [formControl]="categories" multiple name="selectCategory" #packageByCategory (selectionChange)="showPackageByCategory($event.value)">
-            <mat-select-trigger>
-              {{categories.value ? categories.value[0] : ''}}
-              <span *ngIf="categories.value?.length > 1" style="opacity: 0.75;font-size: 0.75em;">
-                (+{{categories.value.length - 1}} {{categories.value?.length === 2 ? 'other' : 'others'}})
-              </span>
-            </mat-select-trigger>
-            <mat-option *ngFor="let category of convertToJSON(category)" [value]="category">{{category}}</mat-option>
-          </mat-select>
-        </mat-form-field>&nbsp;&nbsp;&nbsp; -->
-
-        <!--button (click)="sortClick()">Sort</button-->
-        <!--button className="bn632-hover bn28" (click)="sortClick()">Sort</button-->
-        <button class="button-78" role="button" (click)="sortClick()">Sort (A to Z)</button>
-      </div>
-<div class="containerPP">
-
-<div class="containerpp">
-  <ul *ngIf="packages">
-    <li *ngFor="let search of convertToJSON(search)">
-      <div class="card" [routerLink]="['/packagepage',search.id]">
+    <div class="cardDiv">
+      <div class="card">
         <div class="card-header">
           <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
         </div>
         <div class="card-body">
-          <p class="tag tag-red">{{search.title}}</p>
+          <p class="tag tag-red">Technology</p>
           <p>
-            {{ search.description }}
+            An exploration into the truck's polarising design
+            An exploration into the truck's polarising design
             An exploration into the truck's polarising design
           </p>
           <div class="bottom">
@@ -116,14 +32,98 @@
           </div>
         </div>
       </div>
-    </li>
-  </ul>
+      <div class="card">
+        <div class="card-header">
+          <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
+        </div>
+        <div class="card-body">
+          <p class="tag tag-red">Framework</p>
+          <p>
+            An exploration into the truck's polarising design
+            An exploration into the truck's polarising design
+            An exploration into the truck's polarising design
+          </p>
+          <div class="bottom">
+            <p >Created By : Ahmed Alharthy</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header">
+          <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
+        </div>
+        <div class="card-body">
+          <p class="tag tag-red">Technology</p>
+          <p>
+            An exploration into the truck's polarising design
+            An exploration into the truck's polarising design
+            An exploration into the truck's polarising design
+          </p>
+          <div class="bottom">
+            <p >Created By : Ahmed Alharthy</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--input type="text" class="form-control" (input)="showSearch($event.target.value)" placeholder="Search package..."-->
+
+
+  <div class="sortDiv">
+    <div class="search-box">
+      <input type="text" class="search-input" (input)="showSearch($event.target.value)" placeholder="Search package...">
+      <a class="search-btn" href="#">
+        <i class="fas fa-search"></i>
+      </a>
+    </div>
+    <div>
+      <h1>All packages</h1>
+    </div>
+
+
+    <!--button (click)="sortClick()">Sort</button-->
+    <!--button className="bn632-hover bn28" (click)="sortClick()">Sort</button-->
+    <button class="button-78" role="button" (click)="sortClick()">Sort (A to Z)</button>
+  </div>
+  <div class="containerPP">
+
+    <div class="containerpp">
+      <ul *ngIf="packages">
+        <li *ngFor="let search of convertToJSON(search)">
+          <div class="card" [routerLink]="['/packagepage',search.id]">
+            <div class="card-header">
+              <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
+            </div>
+            <div class="card-body">
+              <p class="tag tag-red">{{search.title}}</p>
+              <p>
+                {{ search.description }}
+                An exploration into the truck's polarising design
+              </p>
+              <div class="bottom">
+                <p >Created By : Ahmed Alharthy</p>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+
   </div>
 
-</div>
 
-
-
+  <mat-form-field appearance="fill">
+       <mat-label>Categories</mat-label>
+       <mat-select [formControl]="categories" multiple name="selectCategory" #packageByCategory (selectionChange)="showPackageByCategory($event.value)">
+         <mat-select-trigger>
+           {{categories.value ? categories.value[0] : ''}}
+           <span *ngIf="categories.value?.length > 1" style="opacity: 0.75;font-size: 0.75em;">
+             (+{{categories.value.length - 1}} {{categories.value?.length === 2 ? 'other' : 'others'}})
+           </span>
+         </mat-select-trigger>
+         <mat-option *ngFor="let category of convertToJSON(category)" [value]="category">{{category}}</mat-option>
+       </mat-select>
+  </mat-form-field>&nbsp;&nbsp;&nbsp;
 
 
 
