--- a/client/src/app/home-page/home-page.component.html
+++ b/client/src/app/home-page/home-page.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="col-lg-6 order-lg-1">
         <div class="p-5">
-          <h2 class="display-4">Discover our packages !</h2>
+          <h2 class="display-4">Discover our premium packages !</h2>
           <p>By accessing our market place, you can find and download multiple and diversified packages according to your need.</p>
         </div>
       </div>
