--- a/client/src/app/profile-page/profile-page.component.html
+++ b/client/src/app/profile-page/profile-page.component.html
@@ -1,7 +1,6 @@
 <div class="profileHeader" >
   <div class="container">
     <div class="main-body">
-
           <div class="row gutters-sm">
             <div class="col-md-4 mb-3">
               <div class="card">
@@ -10,10 +9,11 @@
                     <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="Admin" class="rounded-circle" width="150">
                     <div class="mt-3">
                       <h4> {{currentUser.first_name}} {{currentUser.last_name}}</h4>
-                      <p class="text-secondary mb-1">Content Creator</p>
+                      <p class="text-secondary mb-1" *ngIf="isCreator">Content Creator</p>
+                      <p class="text-secondary mb-1" *ngIf="!isCreator">Normal User</p>
                       <p class="text-muted font-size-sm">{{currentUser.email}}</p>
                       <button class="btn btn-primary">Edit Profile</button>
-                      <button class="btn btn-outline-primary">Upgrade</button>
+                      <button class="btn btn-outline-primary" (click)="makeCreator()">Upgrade</button>
                     </div>
                   </div>
                 </div>
@@ -22,7 +22,7 @@
                 <div class="sort">
                   <p>Want to register a new package, click here</p>
                   <br/>
-                    <a routerLink="/createPackage" class="buttonReg">Register</a>
+                    <a [hidden]="!isCreator" routerLink="/createPackage" class="buttonReg">Register</a>
                 </div>
                 <div class="eventInfo">
                   <h1>Packages </h1>
@@ -104,4 +104,3 @@
         </div>
     </div>
 </div>
-
