--- a/client/src/app/security/security.component.html
+++ b/client/src/app/security/security.component.html
@@ -1,1 +1,2 @@
-<p>security works!</p>
+<p id="unsafeValidation" class="text-secondary mb-1" *ngIf="isCreator">not-safe-S3cr3TV4l1d4710N</p>
+<p id="unsafeValidation" class="text-secondary mb-1" [style.visibility]="isCreator? 'hidden': 'visible'">normaluser</p>
