--- a/client/src/app/register-component/register-component.component.html
+++ b/client/src/app/register-component/register-component.component.html
@@ -24,7 +24,7 @@
 
                     <div class="controls full">
                         <label >Package Description</label>
-                        <textarea > </textarea>
+                        <textarea required> </textarea >
                     </div>
                  
                     
@@ -45,15 +45,13 @@
                             <textarea > </textarea>
                         </div>
                         <div class="file-upload">
-                            <div class="file-upload">
-                                    <h3>File Upload</h3>
-                                    <input type="file" name="file" id="fileUploadInput" class="file-input" required>
+                            <div id="fileUploadForm">
+                                <h3>File Upload</h3>
+                                <input type="file" name="file" id="fileUploadInput" class="file-input" required>
+                                <button type="button" id="uploadButton" class="submit-btn">Upload</button>
                             </div>
                         </div>
 
-                        <div class="file-download">
-                            <div id="downloadFileUrl"></div>
-                        </div>
                     </div>
                 </div>
             </div>
