--- a/client/src/app/register-component/register-component.component.html
+++ b/client/src/app/register-component/register-component.component.html
@@ -4,6 +4,9 @@
     </noscript>
 
         <form class="registerForm" >
+            <div class="alert alert-danger" role="alert">
+                This is a danger alert—check it out!
+              </div>
             <h2 >Create a new package </h2>
             <div class="subForm">
                 <div class="leftGrid">
@@ -24,7 +27,7 @@
 
                     <div class="controls full">
                         <label >Package Description</label>
-                        <textarea required> </textarea >
+                        <textarea id="description" required> </textarea >
                     </div>
                  
                     
@@ -42,7 +45,7 @@
                     <div>
                         <div class="controls full">
                             <label >Installation description*</label>
-                            <textarea > </textarea>
+                            <textarea id="Installation"> </textarea>
                         </div>
                         <div class="file-upload">
                             <div id="fileUploadForm">
