download page and profile page improvements

--- a/client/src/app/package-page/package-page.component.html
+++ b/client/src/app/package-page/package-page.component.html
@@ -23,6 +23,10 @@
     </div>
 
     <div class="buttons">
-        <button>Download</button>
+        
+        <div class="file-download">
+            <div id="downloadFileUrl"></div>
+         <button (click)="DownloadFile()">Download</button>
+        </div>
     </div>
   </div>
