--- a/client/src/app/register-component/register-component.component.html
+++ b/client/src/app/register-component/register-component.component.html
@@ -48,7 +48,7 @@
                             <div id="fileUploadForm">
                                 <h3>File Upload</h3>
                                 <input type="file" name="file" id="fileUploadInput" class="file-input" required>
-                                <button type="button" id="uploadButton" class="submit-btn">Upload</button>
+                                <button type="button" (click)="createEventListener()" id="uploadButton" class="submit-btn">Upload</button>
                             </div>
                         </div>
 
