--- a/client/src/app/profile-page/profile-page.component.html
+++ b/client/src/app/profile-page/profile-page.component.html
@@ -42,54 +42,32 @@
               <div class="row gutters-sm">
                 <div class="packagesContainer">
 
-                  <div class="card">
-                    <div class="card-header">
-                      <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
+                  <div class="containerPP">
+
+                    <div class="containerpp">
+                      <ul *ngIf="packages">
+                        <ul *ngFor="let search of packages">
+                          <div class="card" [routerLink]="['/packagepage',search.id]">
+                            <div class="card-header">
+                              <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
+                            </div>
+                            <div class="card-body">
+                              <p class="tag tag-red">{{search.title}}</p>
+                              <p>
+                                {{ search.description }}
+                                An exploration into the truck's polarising design
+                              </p>
+                              <div class="bottom">
+                                <p >Created By : Ahmed Alharthy</p>
+                              </div>
+                            </div>
+                          </div>
+                        </ul>
+                      </ul>
                     </div>
-                    <div class="card-body">
-                      <p class="tag tag-red">Technology</p>
-                      <p>
-                        An exploration into the truck's polarising design
-                        An exploration into the truck's polarising design
-                        An exploration into the truck's polarising design
-                      </p>
-                      <div class="bottom">
-                        <button class="button">Edit</button>
-                      </div>
-                    </div>
+                
                   </div>
-                  <div class="card">
-                    <div class="card-header">
-                      <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
-                    </div>
-                    <div class="card-body">
-                      <span class="tag tag-red">Technology</span>
-                      <p>
-                        An exploration into the truck's polarising design
-                        An exploration into the truck's polarising design
-                        An exploration into the truck's polarising design
-                      </p>
-                      <div class="bottom">
-                        <button class="button">Edit</button>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header">
-                      <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple115/v4/4a/fa/e0/4afae0c6-9793-309d-ef98-fdee220b3e3f/source/512x512bb.jpg" alt="rover" />
-                    </div>
-                    <div class="card-body">
-                      <span class="tag tag-red">Technology</span>
-                      <p>
-                        An exploration into the truck's polarising design
-                        An exploration into the truck's polarising design
-                        An exploration into the truck's polarising design
-                      </p>
-                      <div class="bottom">
-                        <button class="button">Edit</button>
-                      </div>
-                    </div>
-                  </div>
+            
 
 
                 </div>
@@ -99,6 +77,7 @@
 
 
             </div>
+
           </div>
 
         </div>
