--- a/client/src/app/profile-page/profile-page.component.html
+++ b/client/src/app/profile-page/profile-page.component.html
@@ -38,7 +38,7 @@
               <div class="card mb-3">
                 <div class="profileBanner">Profile Header</div>
               </div>
-
+              <h1 style="text-align:center">Your Packages</h1>
               <div class="row gutters-sm">
                 <div class="packagesContainer">
 
