--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -124,11 +124,11 @@
     </div>
   </div>
 
-  <select class="browser-default custom-select" (change)="typeSelected()">
+  <!-- <select class="browser-default custom-select" (change)="typeSelected()">
     <option selected>Select Role</option>
     <option value="1">Content Creator</option>
     <option value="2">User</option>
-  </select>
+  </select> -->
   <small id="space" class="form-text text-muted mb-4">
 
   </small>
